--- a/page/style.css
+++ b/page/style.css
@@ -25,7 +25,7 @@ body{
 }
 .custom-width-register {
     width: 500px;
-    height: 660px;
+    max-height: 700px;
     background-color: rgb(241, 241, 241) !important;
 }
 .custom-width-index {
